feat: add YAML schema validation and improve custom track handling
- Add custom_tracks_schema.yaml for YAML validation
- Create get_playlist.py script for playlist data retrieval
- Enhance sync.py with better error handling and validation
- Simplify custom track insertion logic (remove missing track restrictions)
- Add comprehensive warning messages for edge cases
- Update VS Code configuration with purple theme and launch configs
- Update spotipy dependency to 2.25.1
- Add empty cuesync.py command file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/src/main.py",
-      "args": ["sync"],
+      "args": ["sync", "0usXtvZs21qyg5LNSAsBjK"],
       "console": "integratedTerminal",
       "justMyCode": false
     },
@@ -28,6 +28,15 @@
       "request": "launch",
       "program": "${workspaceFolder}/src/main.py",
       "args": ["buy"],
+      "console": "integratedTerminal",
+      "justMyCode": false
+    },
+    {
+      "name": "Run: get playlist",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/get_playlist.py",
+      "args": ["5DSl5ZztY60k7jN7u4hhVG"],
       "console": "integratedTerminal",
       "justMyCode": false
     }
