--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,7 @@ setuptools==70.0.0
 six==1.16.0
 soupsieve==2.5
 spotipy==2.25.1
+Pillow==10.4.0
 SQLAlchemy==2.0.30
 sqlcipher3==0.5.2
 stack-data==0.6.3
